# AC-Solver

./: .gitignore  Contributions.md  LICENSE.md  README.md  What_is_AC.md  pyproject.toml
ac_env_solver/: __init__.py
ac_env_solver/agents/: args.py  environment.py  ppo.py  training.py  utils.py
ac_env_solver/envs/: ac_env.py  ac_moves.py  utils.py
ac_env_solver/search/: breadth_first.py  greedy.py
ac_solver/: __init__.py
ac_solver/agents/: args.py  environment.py  ppo.py  ppo_agent.py  ppo_new.py  training.py  utils.py
ac_solver/envs/: ac_env.py  ac_moves.py
ac_solver/search/: breadth_first.py  greedy.py
ac_solver/search/miller_schupp/: miller_schupp.py
ac_solver/search/miller_schupp/data/: bfs_solved_presentations.txt  greedy_search_paths.txt  greedy_solved_presentations.txt
barcode analysis/5-steps neibourhoods/: README.txt  unsolved_miller_schupp_presentations.txt
barcode analysis/Simplex data generation/: README.txt
barcode analysis/Simplex data generation/Classic moves, sets/: ac_bfs.cpp
barcode_analysis/5-steps neibourhoods/: test_input.txt
barcode_analysis/5_steps_neibourhoods/: AC_UTILS_no_hash.cpp  neibourhoods.cpp
barcode_analysis/Simplex data generation/Classic moves, sets/: AC_UTILS_as_sets.h
barcode_analysis/Simplex data generation/Prime moves, sets/: AC_UTILS_as_sets.h
barcode_analysis/simplex_data_generation/prime_moves/: ac_bfs.cpp
notebooks/: Classical-Search-and-PPO-in-AC-Environment.ipynb  Scaling-PPO-in-AC-Environment.ipynb  Section-5.ipynb  Sections-1-3-and-4.ipynb  Stable-AK3.ipynb  stable_ak3.ipynb
rlformath/agents/: ppo.py  ppo_train.py  utils.py
rlformath/envs/: ac_env.py
rlformath/search/: breadth_first.py  greedy.py
rlformath/search/miller_schupp/: miller_schupp.py
rlformath/search/miller_schupp/data/: all_miller_schupp_presentations.txt
tests/: test_ac_env.py
tests/agents/: test_ppo.py
tests/envs/: test_envs_utils.py
tests/search/: test_bfs.py  test_gs.py
tests/search/miller_schupp/: test_miller_schupp.py
tests/search/miller_schupp/data/: test_do_files_exist.py
