[tool.poetry]
name = "rlformath"
version = "0.1.0"
description = ""
authors = ["shehper <ali.shehper1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
absl-py = "1.4.0"
aiohttp = "3.8.4"
aiohttp-cors = "0.7.0"
aiosignal = "1.3.1"
ale-py = "0.8.1"
anyio = "3.6.2"
appdirs = "1.4.4"
appnope = "0.1.3"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.2.3"
asttokens = "2.2.1"
async-timeout = "4.0.2"
attrs = "23.1.0"
AutoROM = "0.6.1"
backcall = "0.2.0"
beautifulsoup4 = "4.12.2"
bleach = "6.0.0"
blessed = "1.20.0"
cachetools = "5.3.0"
certifi = "2023.5.7"
cffi = "1.15.1"
charset-normalizer = "3.1.0"
click = "8.1.3"
cloudpickle = "2.2.1"
colorful = "0.5.5"
comm = "0.1.3"
contourpy = "1.0.7"
cycler = "0.11.0"
debugpy = "1.6.7"
decorator = "4.4.2"
defusedxml = "0.7.1"
distlib = "0.3.6"
dm-tree = "0.1.8"
docker-pycreds = "0.4.0"
executing = "1.2.0"
Farama-Notifications = "0.0.4"
fastjsonschema = "2.16.3"
filelock = "3.12.0"
fonttools = "4.39.4"
fqdn = "1.5.1"
frozenlist = "1.3.3"
gast = "0.5.4"
gitdb = "4.0.10"
GitPython = "3.1.31"
google-api-core = "2.11.0"
google-auth = "2.18.0"
google-auth-oauthlib = "1.0.0"
googleapis-common-protos = "1.59.0"
gpustat = "1.1"
grpcio = "1.49.1"
gym = "0.23.1"
gym-notices = "0.0.8"
gymnasium = "0.28.1"
idna = "3.4"
imageio = "2.28.1"
imageio-ffmpeg = "0.4.8"
importlib-metadata = "6.6.0"
importlib-resources = "5.12.0"
ipykernel = "6.22.0"
ipython = "8.13.2"
ipython-genutils = "0.2.0"
ipywidgets = "8.1.1"
isoduration = "20.11.0"
jax-jumpy = "1.0.0"
jedi = "0.18.2"
Jinja2 = "3.1.2"
joblib = "1.3.2"
jsonpointer = "2.3"
jsonschema = "4.17.3"
jupyter-contrib-core = "0.4.2"
jupyter-contrib-nbextensions = "0.7.0"
jupyter-events = "0.6.3"
jupyter-highlight-selected-word = "0.2.0"
jupyter-nbextensions-configurator = "0.6.3"
jupyter_client = "8.2.0"
jupyter_core = "5.3.0"
jupyter_server = "2.5.0"
jupyter_server_terminals = "0.4.4"
jupyterlab-pygments = "0.2.2"
jupyterlab-widgets = "3.0.9"
kiwisolver = "1.4.4"
lxml = "4.9.2"
lz4 = "4.3.2"
Markdown = "3.4.3"
markdown-it-py = "2.2.0"
MarkupSafe = "2.1.2"
matplotlib = "3.7.1"
matplotlib-inline = "0.1.6"
mdurl = "0.1.2"
mistune = "2.0.5"
moviepy = "1.0.3"
mpmath = "1.3.0"
msgpack = "1.0.5"
multidict = "6.0.4"
nbclassic = "1.0.0"
nbclient = "0.7.4"
nbconvert = "7.4.0"
nbformat = "5.8.0"
nest-asyncio = "1.5.6"
networkx = "3.1"
notebook = "6.5.4"
notebook_shim = "0.2.3"
numpy = "1.24.3"
nvidia-ml-py = "11.525.112"
oauthlib = "3.2.2"
opencensus = "0.11.2"
opencensus-context = "0.1.3"
opencv-python = "4.7.0.72"
packaging = "23.1"
pandas = "2.0.1"
pandocfilters = "1.5.0"
parso = "0.8.3"
pathtools = "0.1.2"
patsy = "0.5.6"
pexpect = "4.8.0"
pickleshare = "0.7.5"
Pillow = "9.5.0"
platformdirs = "3.5.0"
plotly = "5.18.0"
proglog = "0.1.10"
prometheus-client = "0.16.0"
prompt-toolkit = "3.0.38"
protobuf = "3.20.3"
psutil = "5.9.5"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
py-spy = "0.3.14"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycparser = "2.21"
pydantic = "1.10.7"
pygame = "2.4.0"
Pygments = "2.15.1"
pyparsing = "3.0.9"
pyrsistent = "0.19.3"
python-dateutil = "2.8.2"
python-json-logger = "2.0.7"
pytz = "2023.3"
PyYAML = "6.0"
pyzmq = "25.0.2"
ray = "2.4.0"
requests = "2.30.0"
requests-oauthlib = "1.3.1"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rich = "13.3.5"
rsa = "4.9"
scikit-learn = "1.3.1"
scipy = "1.10.1"
seaborn = "0.13.2"
Send2Trash = "1.8.2"
sentry-sdk = "1.23.1"
setproctitle = "1.3.2"
Shimmy = "0.2.1"
six = "1.16.0"
smart-open = "6.3.0"
smmap = "5.0.0"
sniffio = "1.3.0"
soupsieve = "2.4.1"
stable-baselines3 = "2.0.0a5"
stack-data = "0.6.2"
statsmodels = "0.14.1"
sympy = "1.11.1"
tabulate = "0.9.0"
tenacity = "8.2.3"
tensorboard = "2.13.0"
tensorboard-data-server = "0.7.0"
tensorboardX = "2.6"
tensorflow-probability = "0.20.1"
terminado = "0.17.1"
threadpoolctl = "3.2.0"
tinycss2 = "1.2.1"
torch = "2.0.1"
torch-tb-profiler = "0.4.1"
torchvision = "0.15.2"
tornado = "6.3.1"
tqdm = "4.65.0"
traitlets = "5.9.0"
typing_extensions = "4.5.0"
tzdata = "2023.3"
uri-template = "1.2.0"
urllib3 = "1.26.15"
virtualenv = "20.21.0"
virtualenvwrapper-win = "1.2.7"
wandb = "0.15.3"
wcwidth = "0.2.6"
webcolors = "1.13"
webencodings = "0.5.1"
websocket-client = "1.5.1"
Werkzeug = "2.3.4"
widgetsnbextension = "4.0.9"
yarl = "1.9.2"
zipp = "3.15.0"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
