[tool.poetry]
name = "ac_solver"
version = "0.1.0"
description = ""
authors = ["shehper <ali.shehper1@gmail.com>"]
readme = "README.md"

packages = [
    { include = "ac_solver" }
]

include = [
    "ac_solver/search/miller_schupp/data/*"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
appdirs = "1.4.4"
appnope = "0.1.4"
asttokens = "2.4.1"
attrs = "24.2.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
cloudpickle = "3.0.0"
comm = "0.2.2"
contourpy = "1.2.1"
cycler = "0.12.1"
debugpy = "1.8.5"
decorator = "5.1.1"
docker-pycreds = "0.4.0"
exceptiongroup = "1.2.2"
executing = "2.0.1"
Farama-Notifications = "0.0.4"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
fonttools = "4.53.1"
gitdb = "4.0.11"
GitPython = "3.1.43"
gymnasium = "0.28.1"
idna = "3.8"
importlib_metadata = "8.4.0"
importlib_resources = "6.4.4"
ipykernel = "6.29.5"
ipython = "8.18.1"
jax-jumpy = "1.0.0"
jedi = "0.19.1"
Jinja2 = "3.1.4"
joblib = "1.4.2"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter_client = "8.6.2"
jupyter_core = "5.7.2"
kaleido = "0.2.1"
kiwisolver = "1.4.5"
MarkupSafe = "2.1.5"
matplotlib = "3.7.1"
matplotlib-inline = "0.1.7"
mpmath = "1.3.0"
nbformat = "5.8.0"
nest-asyncio = "1.6.0"
networkx = "3.2.1"
numpy = "1.24.3"
packaging = "24.1"
parso = "0.8.4"
pathtools = "0.1.2"
pexpect = "4.9.0"
pillow = "10.4.0"
platformdirs = "4.2.2"
plotly = "5.18.0"
prompt_toolkit = "3.0.47"
protobuf = "4.25.4"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure_eval = "0.2.3"
Pygments = "2.18.0"
pyparsing = "3.1.4"
python-dateutil = "2.9.0.post0"
PyYAML = "6.0.2"
pyzmq = "26.2.0"
referencing = "0.35.1"
requests = "2.32.3"
rpds-py = "0.20.0"
scikit-learn = "1.3.1"
scipy = "1.13.1"
sentry-sdk = "2.13.0"
setproctitle = "1.3.3"
six = "1.16.0"
smmap = "5.0.1"
stack-data = "0.6.3"
sympy = "1.13.2"
tenacity = "9.0.0"
threadpoolctl = "3.5.0"
torch = "2.0.1"
tornado = "6.4.1"

traitlets = "5.14.3"
typing_extensions = "4.12.2"
urllib3 = "2.2.2"
wandb = "0.15.3"
wcwidth = "0.2.13"
zipp = "3.20.1"
tqdm = "4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
